added notebooks early exploration rivm Lden raster data

--- a/datacollection/basic_vis.ipynb
+++ b/datacollection/basic_vis.ipynb
@@ -232,7 +232,11 @@
     "    # plt.show()\n",
     "\n",
     "gdf['DbA'] = full_db_array\n",
+    "gdf.to_file('gdf_full.gpkg')\n",
+    "gdf.to_csv('gdf_full.csv')\n",
     "gdf_aud = gdf.dropna()\n",
+    "\n",
+    "\n",
     "\n",
     "plt.plot(full_db_array)\n",
     "plt.title(file)\n",
