early attempts at modelling

--- a/datacollection/rivm_exploration.ipynb
+++ b/datacollection/rivm_exploration.ipynb
@@ -53,18 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x13b0534fc80>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1148, 1309)\n"
+     ]
     },
     {
      "data": {
@@ -78,7 +75,8 @@
     }
    ],
    "source": [
-    "lden_rasters.plot()"
+    "lden_rasters.plot()\n",
+    "print(lden_rasters.shape)"
    ]
   },
   {
