--- a/method/00-preprocessing.ipynb
+++ b/method/00-preprocessing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "skip_saving_output = False\n",
     "\n",
     "# update these values to change where final file is stored (must include .shp file name)\n",
-    "final_file_path = '..\\\\output\\\\collected_data.GEOJSON'"
+    "observations_final_file_path = '..\\\\output\\\\observation_data.GEOJSON'\n",
+    "distributed_data_final_file_path = '..\\\\output\\\\distributed_data.GEOJSON'"
    ]
   },
   {
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,6 +292,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['y', 'x', 'dBA_rivm', 'geometry', 'speed_arr', 'dBA_raw_arr',\n",
+       "       'dBA_reg_arr', 'median_speed', 'median_dBA_raw', 'median_dBA_reg_adj'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_gdf.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,37 +322,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished saving gdf to files\n"
+      "Finished saving observation data to files\n"
      ]
     }
    ],
    "source": [
     "if not skip_saving_output:\n",
-    "    gdf.to_file(final_file_path)\n",
-    "\n",
-    "    csv_file_path = f'{final_file_path[:-8]}.csv'\n",
-    "    gdf.to_csv(csv_file_path)\n",
-    "    \n",
-    "    print('Finished saving gdf to files')"
+    "    # * saving observation data\n",
+    "    gdf.to_file(observations_final_file_path)\n",
+    "    gdf.to_csv(f'{observations_final_file_path[:-8]}.csv')\n",
+    "    print('Finished saving observation data to files')\n",
+    "    # * saving distributed data\n",
+    "    # (arrays cannot be stored and should be unnecessary, thus are removed)\n",
+    "    del combined_gdf['speed_arr'], combined_gdf['dBA_raw_arr'], combined_gdf['dBA_reg_arr']\n",
+    "    combined_gdf.to_file(distributed_data_final_file_path, engine='pyogrio', use_arrow=True)\n",
+    "    print('tofiledone')\n",
+    "#     gdf = gpd.read_file(\"..\\\\data\\\\nwb_wegen.gpkg\", engine='pyogrio', use_arrow=True)\n",
+    "# #800MB file, first run took approx >120s without engines (didnt finish)\n",
+    "# #with pyogrio and pyarrow: 10s but 1 UswerWarning\n",
+    "    combined_gdf.to_csv(f'{distributed_data_final_file_path[:-8]}.csv')\n",
+    "    print('Finished saving distributed observation point data to files')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple visualization of results"
+    "## Simple visualization of observations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
