experimenting with different data input compositions

--- a/method/04-rk_model-cleanvis.ipynb
+++ b/method/04-rk_model-cleanvis.ipynb
@@ -53,9 +53,9 @@
    "outputs": [],
    "source": [
     "# importing datasets\n",
-    "data_lu = gpd.read_file('..\\\\output\\\\data_lu_1.GEOJSON', engine='pyogrio')\n",
-    "data_sp = gpd.read_file('..\\\\output\\\\data_sp_1.GEOJSON', engine='pyogrio')\n",
-    "data_oz = gpd.read_file('..\\\\output\\\\data_oz_1.GEOJSON', engine='pyogrio')"
+    "data_lu = gpd.read_file('..\\\\output\\\\data_lu_nr2.GEOJSON', engine='pyogrio')\n",
+    "data_sp = gpd.read_file('..\\\\output\\\\data_sp_nr2.GEOJSON', engine='pyogrio')\n",
+    "data_oz = gpd.read_file('..\\\\output\\\\data_oz_nr2.GEOJSON', engine='pyogrio')"
    ]
   },
   {
