fixed a bug where slt30 measurements werent actually calculated based only on measurements w/ s<30
tried doing the model evaluation but gav eup

--- a/final_method/03-model_selection.ipynb
+++ b/final_method/03-model_selection.ipynb
@@ -1025,6 +1025,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 50,\n",
+       " 'max_depth': 10,\n",
+       " 'min_samples_split': 10,\n",
+       " 'min_samples_leaf': 4,\n",
+       " 'max_features': 2,\n",
+       " 'random_state': 12}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_tune_results.best_iteration.model_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y</th>\n",
+       "      <th>x</th>\n",
+       "      <th>dBA_rivm</th>\n",
+       "      <th>no_observations</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>speed_slt30</th>\n",
+       "      <th>dBA_raw</th>\n",
+       "      <th>dBA_raw_slt30</th>\n",
+       "      <th>dBA_noise_red</th>\n",
+       "      <th>dBA_noise_red_slt30</th>\n",
+       "      <th>dBA_reg_adj</th>\n",
+       "      <th>dBA_reg_adj_slt30</th>\n",
+       "      <th>dBA_dual_red</th>\n",
+       "      <th>dBA_dual_red_slt30</th>\n",
+       "      <th>maxspeed</th>\n",
+       "      <th>bridge</th>\n",
+       "      <th>junction</th>\n",
+       "      <th>rt_highway</th>\n",
+       "      <th>rt_trunk</th>\n",
+       "      <th>rt_primary</th>\n",
+       "      <th>rt_secondary</th>\n",
+       "      <th>rt_tertiary</th>\n",
+       "      <th>rt_unclassified</th>\n",
+       "      <th>rt_residential</th>\n",
+       "      <th>rt_living_street</th>\n",
+       "      <th>rt_busway</th>\n",
+       "      <th>rt_service</th>\n",
+       "      <th>sub_area</th>\n",
+       "      <th>dist_to_train</th>\n",
+       "      <th>dist_to_recreation</th>\n",
+       "      <th>landuse_is_residential</th>\n",
+       "      <th>landuse_is_commercial</th>\n",
+       "      <th>landuse_is_industrial</th>\n",
+       "      <th>building_height</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty GeoDataFrame\n",
+       "Columns: [y, x, dBA_rivm, no_observations, speed, speed_slt30, dBA_raw, dBA_raw_slt30, dBA_noise_red, dBA_noise_red_slt30, dBA_reg_adj, dBA_reg_adj_slt30, dBA_dual_red, dBA_dual_red_slt30, maxspeed, bridge, junction, rt_highway, rt_trunk, rt_primary, rt_secondary, rt_tertiary, rt_unclassified, rt_residential, rt_living_street, rt_busway, rt_service, sub_area, dist_to_train, dist_to_recreation, landuse_is_residential, landuse_is_commercial, landuse_is_industrial, building_height, geometry, fold]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf[gdf['speed'] != gdf['speed_slt30']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
