Documentation and clean up for submission

--- a/02-model_preprocessing.ipynb
+++ b/02-model_preprocessing.ipynb
@@ -851,6 +851,7 @@
     "\n",
     "def download_and_extract_gpkg(url, output_path):\n",
     "    \"\"\"\n",
+    "    Utility for processing gpkg files.\n",
     "    \"\"\"\n",
     "    output_path = Path(output_path)\n",
     "    # Download the file\n",
@@ -871,6 +872,7 @@
     "\n",
     "def create_gpkg_height_gdf(height_tiles):\n",
     "    \"\"\"\n",
+    "    Utility to extract height data from 3dbag gpkg files.\n",
     "    \"\"\"\n",
     "    height_gdf = None\n",
     "    for url in height_tiles['gpkg_download']:\n",
@@ -887,6 +889,7 @@
     "\n",
     "def create_cityjson_height_gdf(height_tiles):\n",
     "    \"\"\"\n",
+    "    Utility to extract meta data from 3dbag cj files.\n",
     "    \"\"\"\n",
     "    height_gdf = None\n",
     "    for url in height_tiles['cj_download']:\n",
